syntax = "proto3";

option go_package = "./pb";

package pb;


//model
message User {
  int64  id = 1;
  string name = 2;
}
message GetUserInfoReq {
  int64  id = 1;
  string  name = 2;
}
message GetUserInfoResp {
  User user = 1;
}


//service
service usercenter {
  rpc GetUserInfo(GetUserInfoReq) returns(GetUserInfoResp);
}
